# syntx-issues-microservice

./: Cargo.toml  README.md
migrations/2022-07-05-071411_boards/: up.sql
migrations/2022-07-05-081840_columns/: down.sql  up.sql
migrations/2022-07-05-081845_issues/: down.sql  up.sql
migrations/2022-07-07-124826_epics/: down.sql  up.sql
migrations/2022-07-08-153236_dependencies/: up.sql
proto/: build.rs
proto/src/: lib.rs
src/: main.rs
src/controllers/: boards.rs  columns.rs  dependencies.rs  epics.rs  issues.rs  mod.rs
src/db/: connection.rs  mod.rs  models.rs  schema.rs
src/db/repos/: board.rs  column.rs  dependency.rs  epic.rs  issue.rs  mod.rs
