[package]
name = "issues"
version = "0.1.0"
edition = "2021"


[dependencies]
proto = { path = "./proto" }
prost-types = "0.10.1"
tonic = "0.7.2"
tokio = { version = "1.19.2", features = ["rt-multi-thread"] }
tokio-stream = "0.1.9"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
diesel = { version = "1.4.4", features = ["chrono", "postgres", "r2d2", "uuidv07"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
futures = "0.3.21"
chrono = "0.4.19"